<resources>
    <string name="app_name">VKK Filters</string>
    <string name="ImageEditor_ButtonLabel">Редактор изображений</string>
    <string name="Logo_Description">Логотип VKKF</string>
    <string name="drawButton_Label">Отрисовать</string>
    <string name="show_images_label">Картинки</string>
    <string name="button">Button</string>
    <string name="image_rotation">image rotation</string>
    <string name="rotation">Поворот</string>
    <string name="filters">Фильтры</string>
    <string name="scaling">Масштаб</string>
    <string name="face_recognition">Лица</string>
    <string name="Spline_ButtonLabel">Сплайны</string>
    <string name="retouch">Ретушь</string>
    <string name="masking">Нер. маскир.</string>
    <string name="affine_transform">Аффин. преобр.</string>
    <string name="TDCube_ButtonLabel">3D-фигуры</string>
    <string name="processed_photo">It\'s a photo that can be processed</string>
    <string name="do_photo">Сфотографировать</string>
    <string name="shapeToShowDefaultLabelText">D6 (куб)</string>
    <string name="background">Background with symbols VKKF on it.</string>
    <string name="pick_a_photo">Выберите картинку</string>
    <string name="takePhoto">Сделать снимок</string>
    <string name="fromGallery">Из галереи</string>
    <string name="apply">Применить</string>
    <string name="save">Сохранить</string>
    <string name="cancel">Отменить</string>
    <string name="unsaved_changes">У вас есть несохранённые изменения!</string>
    <string name="accept_deletion">Вы точно хотите удалить картинку?</string>
    <string name="accept_exit">Вы точно хотите выйти?</string>
    <string name="there_is_no_autosave">Ваши изменения не сохраняются автоматически!</string>
    <string name="delete">Удалить</string>
    <string name="leave">Оставить</string>
    <string name="transparentBG">Прозрачный фон</string>
    <string name="crop">Обрезать</string>
    <string name="error_too_large_image">Ошибка: данная трансформация образует слишком большую картинку. Попробуйте уменьшить второй треугольник.</string>
    <string name="exit">Выйти</string>
    <string name="close">close</string>
    <string name="update_spline">update</string>
    <string name="file_name">Или оставьте пустым</string>
    <string name="enter_file_name">Введите имя вашего файла</string>
    <string name="now_image_is_in_gallery">Теперь ваша картинка в галерее!</string>
    <string name="done">Готово</string>
    <string name="didnt_upload_image">Вы не загрузили картинку!</string>
    <string name="apply_changes_first">Сначала примените изменения!</string>
    <string name="new_name">Tutorial</string>
    <string-array name="spline">
        <item>Close-B-Spline</item>
        <item>Bezier curve</item>
        <item>Cubic spline</item>
        <item>Open-B-Spline</item>
    </string-array>

    <string name="dialog_title">Разрешения</string>
    <string name="dialog_message">Нам нужны ваши разрешения, чтобы мы могли сохранять ваши изображения с камеры.</string>
    <string name="masking_core_radius">Ядро (r): %s</string>
    <string name="masking_amount">Объём: %s</string>
    <string name="retouch_brush_radius">Кисть (r): %s</string>
    <string name="retouch_intensity">Интенс-ть: %s</string>
    <string name="min_value">0</string>
    <string name="max_value">100</string>
    <string name="rotation_value">Повернуть на: %d°</string>
    <string name="scaling_value">Увеличить в: %s раз(а)</string>
    <string name="find_faces">Найти лица</string>
    <string name="filters_contrast_minus50">Контраст +100</string>
    <string name="filters_contrast_plus50">Контраст +50</string>
    <string name="filters_saturation_plus50">Насыщенность +50</string>
    <string name="filters_saturation_minus50">Насыщенность -50</string>
    <string name="filters_inversion">Инверсия</string>
    <string name="filters_common_blur_light">Размытие (слабое)</string>
    <string name="filters_common_blur_medium">Размытие (среднее)</string>
    <string name="filters_common_blur_strong">Размытие (сильное)</string>
    <string name="filters_gaussian_blur_light">Разм. Гаусса (слабое)</string>
    <string name="filters_gaussian_blur_medium">Разм. Гаусса (среднее)</string>
    <string name="filters_gaussian_blur_strong">Разм. Гаусса (сильное)</string>
    <string name="filters_mosaic_tiny">Мозаика (мелкая)</string>
    <string name="filters_mosaic_medium">Мозаика (средняя)</string>
    <string name="filters_mosaic_big">Мозаика (крупная)</string>

</resources>