<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/maskingPropsScroll"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    tools:context=".fragments.MaskingToolFragment">

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp">

        <Button
            android:id="@+id/affineApply"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/icon_apply_button"
            android:fontFamily="@font/tektur_medium"
            android:text="@string/apply"
            android:textAlignment="center"
            android:textColor="@color/MainFontColor" />

        <Button
            android:id="@+id/coreRadiusCall"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="125dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:background="@drawable/background_transition_seekbar_caller"
            android:fontFamily="@font/tektur_medium"
            android:text="@string/masking_core_radius"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/MainFontColor"
            android:textSize="18sp" />

        <Button
            android:id="@+id/amountCall"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="125dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:background="@drawable/background_transition_seekbar_caller"
            android:fontFamily="@font/tektur_medium"
            android:text="@string/masking_amount"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/MainFontColor"
            android:textSize="18sp" />

    </LinearLayout>

</HorizontalScrollView>