<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".PhotoPickerSheet">


    <TextView
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/tektur"
        android:text="@string/pick_a_photo"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:textAlignment="center">

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/galleryPick"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/icon_gallery"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:fontFamily="@font/tektur"
                android:text="@string/fromGallery"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/cameraPick"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/icon_camera"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/tektur"
                android:text="@string/takePhoto"
                android:textAlignment="center" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>